added all functionalities

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="styles.css">
     <title>🍔 Hamburger Clicker</title>
 </head>
-<body class="text-white">
-    <div id="initialPage">
+<body class="text-white bg-dark">
+    <div id="initialPage" class="text-black-50">
         <div class="vh-100 d-flex justify-content-center align-items-center">
             <div class="login-container justify-content-center text-center p-4">
                 <img src="images/hamburger.png" alt="hamburger-img" class="p-2">
@@ -44,34 +44,11 @@
                             <div id="productsInfo"></div>
                         </div>
                     </div>
-                    <div id="dataUtils"></div>
+                    <div class="props-container mt-2 d-flex align-items-center justify-content-end" id="dataUtils"></div>
                 </div>
             </div>
         </div>
     </div>
-
-
-
-    <!-- <div id="target" class="vh-100 d-flex flex-column flex-md-row justify-content-center align-items-center p-3">
-        <div id="hamburger-container" class="d-flex flex-column justify-content-center col-md-6 col-12 py-2 px-2 mb-2 mx-md-2 ">
-            <div id="hamburger-info-container" class="d-flex flex-column text-center align-items-center py-2">
-                <h1 id="hamburger-cnt">1,102 Burgers</h1>
-                <div class="d-flex col-12 text-center">
-                    <h2 class="col-6" id="tot-profit-click">$25 / click</h2>
-                    <h2 class="col-6" id="tot-profit-sec">$25 / sec</h2>  
-                </div>
-            </div>
-            <div id="hamburger-click-container" class="text-center p-4">
-                <img src="images/hamburger.png" alt="hamburger-img" onclick="handleHamburgerClick()">
-            </div>
-        </div>
-        <div id="items-container" class="d-flex flex-column justify-content-center col-md-6 col-12 py-2 px-2">
-            <div id="items-info-container" class="d-flex flex-column text-center align-items-center py-2">
-                <h1>1,102 Burgers</h1>
-                <h2>$25 / sec</h2>
-            </div>
-        </div>
-    </div> -->
 </body>
 <script src="index.js"></script>
 </html>
